creato template riassunto, elaborato alcuni punti del riassunto

--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -1561,7 +1561,7 @@ Ci sono alcuni possibili miglioramenti che sono stati tralasciati per questioni 
 %
 
 Il frutto di questo progetto è stato il prototipo di un sistema di controllo accessi IoT (con il server in locale) per l'azienda ospitante del tirocinio. Sono stati presentati i dettagli necessari per capire tutti i componenti e i passaggi che hanno portato alla creazione sia del sistema embedded sia del sito web.
-Il prototipo è funzionante e abbastanza completo, ma prima di essere messo in funzione potrebbero essere necessari alcuni ritocchi e miglioramenti (leggere la sezione sopra) per renderlo più moderno secondo gli standard dei sistemi commerciali attualmente in uso. Si può quindi dire con soddisfazione che il progetto ha seguito tanti aspetti inerenti al corso di Informatica (Sistemi Embedded, Ingegneria del Software, Basi di Dati, Tecnologie e Linguaggi per il Web, Sistemi Operativi) ed è stato concluso con successo almeno per quanto riguarda i requisiti iniziali.
+Il prototipo è funzionante e abbastanza completo, ma prima di essere messo in funzione potrebbero essere necessari alcuni ritocchi e miglioramenti (leggere la sezione sopra) per renderlo più moderno secondo gli standard dei sistemi commerciali attualmente in uso. Si può quindi dire con soddisfazione che il progetto ha seguito tanti aspetti inerenti al corso di Informatica (Sistemi Embedded, Programmazione, Ingegneria del Software, Basi di Dati, Tecnologie e Linguaggi per il Web, Sistemi Operativi) ed è stato concluso con successo almeno per quanto riguarda i requisiti iniziali.
 
 
 %			BIBLIOGRAFIA
