finito presentazione + discorso, devo ancora stilizzarla meglio

--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -1553,7 +1553,7 @@ Ci sono alcuni possibili miglioramenti che sono stati tralasciati per questioni 
 	\item orario di lavoro: è possibile far sì che l'Arduino sia attivo soltanto durante la fascia oraria 9-18 in cui c'è qualcuno in sede. Questo serve per evitare che qualcuno riesca ad aprire la porta in qualsiasi modo (e.g. telecomando o tessera rubata) al di fuori della fascia oraria;
 	\item sensore di rilevamento: l'Arduino è stato programmato per chiudere la porta dopo un certo intervallo di tempo. È possibile aggiungere un sensore per il rilevamento delle persone per fare in modo che la porta venga chiusa solo quando non ci sono più persone nella vicinanza;
 	\item videocamera: è possibile aggiungere una videocamera connessa alla stessa rete locale che trasmette il video direttamente al server. Questo video potrebbe facilmente essere visualizzabile direttamente sul sito;
-	\item sistema di allarme: si potrebbe installare un sistema di allarme per quando la porta viene aperta forzatamente durante la fascia oraria di inattività. Questo sistema di allarme può essere disabilitato manualmente tramite una password nel caso in cui l'amministratore dovesse usare la porta in quell fascia oraria.
+	\item sistema di allarme: si potrebbe installare un sistema di allarme per quando la porta viene aperta forzatamente durante la fascia oraria di inattività. Questo sistema di allarme può essere disabilitato manualmente tramite una password nel caso in cui l'amministratore dovesse usare la porta in quella fascia oraria.
 \end{itemize}
 
 %
